<resources>
    <string name="app_name">PetCare</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="hello">Hello</string>
    <string name="username">Username</string>
    <string name="name">Saúl Monroy</string>
    <string name="mail">saulandresmm@gmail.com</string>
    <string name="mypets">My Pets</string>
    <string name="numpets">Add a Pet!</string>
    <string name="services">Services</string>
    <string name="txtservices">Schedule an appointment for your pet!</string>
    <string name="activity">My Activities</string>
    <string name="txtActivity">You don\'t have any active service</string>
    <string name="notifications">Notifications</string>
    <string name="txt_notifications">Enable notifications</string>
    <string name="friends">Friends</string>
    <string name="txt_friends">Invite friends</string>
    <string name="logout">Log Out</string>
    <string name="goofy">Goofy</string>
    <string name="pote">Pote</string>
    <string name="turra">Turra</string>
    <string name="txt_pending_appointments">No pending appointments</string>
    <string name="txt_active_service">Not receiving any type of service</string>
    <string name="txt_pet_name">Name</string>
    <string name="pet_type">Pet Type</string>
    <string name="describe">Describe your pet</string>
    <string name="your_pet">Your Pet</string>
    <string name="addpet">Add Pet</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="describe_hint">In this section you can include the breed of your pet, favorite type of toy, favorite food, things you like and things you don\'t like.</string>
    <string name="petHotel">Pet Hotel</string>
    <string name="carer">Carer</string>
    <string name="grooming">Grooming</string>
    <string name="tapto">Touch to see the options</string>
    <string name="taxi">Taxi</string>
    <string name="walk">Pet Walk</string>
    <string name="title_carer">Carers</string>
    <string name="facilities">Facilities</string>
    <string name="experience">Experience</string>
    <string name="schedule">Schedule</string>
    <string name="priceRange">Price Range</string>
    <string name="species">Species</string>
    <string name="petWalkers">Pet Walkers</string>
    <string name="makeAppointment">Make an Appointment</string>
    <string name="price">Price</string>
    <string name="service">Service</string>
    <string name="howIs">How is </string>
    <string name="making_appointment">Making Appointment</string>
    <string name="details">Details</string>
    <string name="hourly_price">Hourly price</string>
    <string name="Number_of_hours">Number of hours</string>
    <string name="goToPayment">Go to Payment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="infoWarning">This information can be seen by the PetWalker</string>
    <string name="yourInfo">Your info</string>
    <string name="chosePet">Choose the pet you want to receive the service.</string>
    <string name="choseDate">Choose the Date</string>
    <string name="date">Date</string>
    <string name="choseStartTime">Start Time</string>
    <string name="def_time">0:00</string>
    <string name="choseEndTime">End Time</string>
    <string name="estimated">Estimated to Pay</string>
    <string name="goToDetails">Go to Details</string>
    <string name="Total">Total:</string>
    <string name="choseTime">Choose the Time</string>
    <string name="infoWarningGrooming">This information can be seem by the grooming center</string>
    <string name="choseStartDate">Choose the day of arrival</string>
    <string name="choseEndDate">Choose the day of departure</string>
    <string name="daily_price">Daily Price</string>
    <string name="number_of_days">Number of Days</string>
    <string name="changePP">Change Profile Picture</string>
    <string name="viewImage">View Image</string>
    <string name="pet_icon">Pet Icon</string>
    <string name="createAcc">Create an Account</string>
    <string name="whatsName">What\'s your first name?</string>
    <string name="whatsAddress">What\'s your Email?</string>
    <string name="whatsPassword">Create a Password</string>
    <string name="whatsPhone">Phone number</string>
    <string name="whatsCountryCode">Country Code</string>
    <string name="city">City</string>
    <string name="age">Introduce your Age</string>
    <string name="write">Write Here</string>
    <string name="noAccount">Don\'t your have an account yet?</string>
    <string name="whatLastname">What\'s your last name?</string>
    <string name="urPhone">This is your phone number</string>
    <string name="urCode">This is your are code</string>
    <string name="Change_my_info">Change my Information</string>
    <string name="urAge">This is your age</string>
    <string name="Account">Account</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="creditCard">Credit Card</string>
    <string name="payment_methods">Payment methods</string>
    <string name="specificService">On service</string>
    <string name="paying_to">Paying to</string>
    <string name="billing_information">Billing information</string>
    <string name="no_billing_information">No billing information</string>
    <string name="pay">Pay</string>
    <string name="addCreditCard">Credit Cards</string>
    <string name="your_credit_cards">Your Saved Credit Cards</string>
    <string name="manageCards">Manage your Credit Cards</string>
    <string name="wannaAddCreditCard">Do you want to add a new credit card?</string>
    <string name="cc_advice">You can also connect with paypal</string>
    <string name="Go">Go</string>
    <string name="more">More</string>
    <string name="help">Help</string>
    <string name="Add_a_new_Card">Add a new Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardCvv">CVV</string>
    <string name="cardProprietary">Proprietary</string>
    <string name="cardName">Card Name</string>
    <string name="cardNickname">Give your card a nickname</string>
    <string name="cardNumberHint">Enter Credit Card Number</string>
    <string name="Due_date">Due date</string>
    <string name="save">Save</string>
    <string name="CardInformation">Card Information</string>
    <string name="cardProprietaryHint">Enter the name of the proprietary</string>
    <string name="emergencyStatus">Emergency</string>
    <string name="Specialty">Specialty</string>
    <string name="address">Address</string>
    <string name="RefundPolicity">Refund Policy</string>
    <string name="photos">Photos</string>
    <string name="choseService">Choose the service you want to hire.</string>
    <string name="PetCare_fee">PetCare Fee</string>
    <string name="includes">Includes</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="extras">Extras</string>
</resources>