<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:padding="8dp"
    tools:context=".objects.addobject.AddPetActivity">

    <ImageView
        android:id="@+id/AddPet_goBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_back_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/AddPet_profilePetPicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_addphoto"
        app:civ_border_color="#99000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/AddPet_profile_txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_pet_name"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddPet_profilePetPicture" />

    <EditText
        android:id="@+id/AddPet_et_petName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/txt_pet_name"
        android:singleLine="true"
        android:textStyle="bold|italic"
        android:background="@drawable/rounded_background_transparent"
        style="@style/et_paddingStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddPet_profile_txtName" />

    <TextView
        android:id="@+id/AddPet_profile_txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/pet_type"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddPet_et_petName" />


    <Spinner
        android:id="@+id/AddPet_et_petType"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_spinner_pet"
        android:hint="@string/pet_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddPet_profile_txtType" />


    <TextView

        android:id="@+id/AddPet_txt_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddPet_et_petType" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/totalTransparent"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddPet_txt_describe"
        app:layout_constraintBottom_toTopOf="@+id/btn_addpet">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <EditText
                android:id="@+id/AddPet_campo_mensaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold|italic"
                android:background="@drawable/rounded_background_transparent"
                style="@style/et_paddingStart"
                android:hint="@string/describe_hint"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="8" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_addpet"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/Background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addpet"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>